Add scripts